syntax="proto3";

package com.zwy.proto;

option java_package = "com.zwy.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService{
    rpc getRealNameByUsername(MyRequest) returns (MyResponse) {}
}

message MyRequest{
    string username=1;
}

message MyResponse{
    string relaname=2;
}